# fast_api

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
app/: __init__.py  arq_config.py  arq_worker.py  celery_app.py  database.py  models.py  settings.py  utils.py
app/article/: models.py  routers.py  schema.py
app/category/: models.py  routers.py  schema.py
app/celery/: celery_app.py  tasks.py
app/core/: config.py  jwt.py
app/users/: auth.py  models.py  routers.py  schema.py  views.py
