[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Roman Morozevich <romamorozevich@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosmtplib = "2.0.2"
alembic = "1.13.2"
amqp = "5.2.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
arq = "0.26.0"
asgiref = "3.8.1"
bcrypt = "4.2.0"
billiard = "4.2.0"
blinker = "1.8.2"
build = "1.2.1"
cachecontrol = "0.14.0"
celery = "5.4.0"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
crashtest = "0.4.1"
cryptography = "43.0.0"
distlib = "0.3.8"
dnspython = "2.6.1"
dulwich = "0.21.7"
ecdsa = "0.19.0"
email-validator = "2.2.0"
fastapi = "0.112.0"
fastapi-cli = "0.0.4"
fastapi-filter = "2.0.0"
fastapi-mail = "1.4.1"
fastapi-pagination = "0.12.26"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
greenlet = "3.0.3"
h11 = "0.14.0"
hiredis = "3.0.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.4"
jose = "1.0.0"
keyring = "24.3.1"
kombu = "5.3.7"
mako = "1.3.5"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
more-itertools = "10.4.0"
msgpack = "1.0.8"
packaging = "24.1"
passlib = "1.7.4"
pexpect = "4.9.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
prompt-toolkit = "3.0.47"
psycopg2-binary = "2.9.9"
ptyprocess = "0.7.0"
pyasn1 = "0.6.0"
pycparser = "2.22"
pydantic = "2.8.2"
pydantic-settings = "2.3.4"
pydantic-core = "2.20.1"
pygments = "2.18.0"
pyproject-hooks = "1.1.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
rapidfuzz = "3.9.6"
redis = "4.6.0"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.7.1"
rsa = "4.9"
setuptools = "71.1.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.31"
starlette = "0.37.2"
tomlkit = "0.13.2"
trove-classifiers = "2024.7.2"
typer = "0.12.3"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
uvicorn = "0.30.3"
uvloop = "0.19.0"
vine = "5.1.0"
virtualenv = "20.26.3"
watchfiles = "0.22.0"
wcwidth = "0.2.13"
websockets = "12.0"
wheel = "0.38.4"
xattr = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
